--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
 		// "disableSolutionSearching": true,                 /* Opt a project out of multi-project reference checking when editing. */
 		// "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
 
+		"paths": {
+			"@/*": ["./src/*"]
+		},
 		/* Language and Environment */
 		"target": "es2021" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
 		"lib": ["es2021"] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
