small bug fixes

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,11 +4,11 @@ main = "src/index.ts"
 compatibility_date = "2024-06-20"
 compatibility_flags = ["nodejs_compat"]
 
-[vars]
-OPENAI_API_KEY = ""
-GEMINI_API_KEY = ""
-ANTHROPIC_API_KEY = ""
-LANGSMITH_API_KEY = ""
+# [vars]
+# OPENAI_API_KEY = ""
+# GEMINI_API_KEY = ""
+# ANTHROPIC_API_KEY = ""
+# LANGSMITH_API_KEY = ""
 
 # Automatically place your workloads in an optimal location to minimize latency.
 # If you are running back-end logic in a Worker, running it closer to your back-end infrastructure
